--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -848,14 +848,14 @@
     <string name="delete_playlist">Delete Playlist</string>
     <string name="delete_playlist_confirmation_msg">Do you want to delete this playlist?</string>
     <string name="playlists_label">Playlists</string>
-    <string name="home_fragment_label">Home</string>
+    <string name="home_fragment_label">Featured</string>
     <string name="pref_auto_delete_playlist_summary">Exclude playlisted episodes from automatic delete</string>
     <string name="pref_auto_delete_playlist_title">Keep Playlisted Episodes</string>
     <string name="add_to_playlist_label">Add to Playlist</string>
     <string name="no_playlists_label">No Playlists</string>
     <string name="no_playlists_sub_label">After you create a playlist, it will appear here.</string>
     <string name="auto_download_cache_pref_summary">"The number of episodes kept by automatic download. Excluded from auto delete. "</string>
-    <string name="home_label">Home</string>
+    <string name="home_label">Featured</string>
     <string name="pref_auto_download_title">Automatic Download</string>
     <string name="pref_automatic_download_sum">Enable automatic download of episodes</string>
 </resources>
