--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -858,4 +858,5 @@
     <string name="home_label">Home</string>
     <string name="pref_auto_download_title">Automatic Download</string>
     <string name="pref_automatic_download_sum">Enable automatic download of episodes</string>
+    <string name="speed_adjusted_label">Speed adjusted time</string>
 </resources>
