Localize queue filter

--- a/core/src/main/res/values-de/strings.xml
+++ b/core/src/main/res/values-de/strings.xml
@@ -813,4 +813,5 @@ Tippen, um Details anzuzeigen.</string>
   <string name="home_label">Befähigt</string>
   <string name="auto_download_cache_pref_summary">"Die Anzahl der Episoden, die durch automatischen Download gespeichert werden. Vom automatischen Löschen ausgeschlossen. "</string>
   <string name="no_playlists_sub_label">Nachdem Sie eine Wiedergabeliste erstellt haben, wird sie hier angezeigt.</string>
+    <string name="confirm_mobile_feed_refresh_dialog_message">Nach Podcasts filtern</string>
 </resources>
