--- a/core/src/main/res/values-es/strings.xml
+++ b/core/src/main/res/values-es/strings.xml
@@ -813,4 +813,5 @@
     <string name="delete_played">Eliminar reproducido</string>
   <string name="pref_automatic_download_sum">Habilitar la descarga automática de episodios</string>
   <string name="pref_auto_download_title">Descarga automática</string>
+    <string name="filter_by_podcasts">Filtrar por Podcasts</string>
 </resources>
