--- a/core/src/main/res/values-hi/strings.xml
+++ b/core/src/main/res/values-hi/strings.xml
@@ -785,7 +785,8 @@
     <string name="pref_auto_download_title">स्वचालित डाउनलोड</string>
   <string name="pref_automatic_download_sum">एपिसोड का स्वचालित डाउनलोड सक्षम करें</string>
   <string name="delete_played">चलाएँ हटाएँ</string>
-  <!--Episodes apply actions-->
+    <string name="filter_by_podcasts">पॉडकास्ट द्वारा फ़िल्टर करें</string>
+    <!--Episodes apply actions-->
   <!--Sort-->
   <!--Rating dialog-->
   <!--Audio controls-->
