--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -859,4 +859,5 @@
     <string name="pref_auto_download_title">Automatic Download</string>
     <string name="pref_automatic_download_sum">Enable automatic download of episodes</string>
     <string name="speed_adjusted_label">Speed adjusted time</string>
+    <string name="priority">Priority</string>
 </resources>
