--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -861,4 +861,6 @@
     <string name="priority">Priority</string>
     <string name="delete_played">Delete Played</string>
     <string name="filter_by_podcasts">Filter by Podcasts</string>
+    <string name="feed_settings_other_title">Other</string>
+    <string name="feed_settings_player_title">Playback</string>
 </resources>
