loop_mode_fragment

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -861,4 +861,5 @@
     <string name="priority">Priority</string>
     <string name="delete_played">Delete Played</string>
     <string name="filter_by_podcasts">Filter by Podcasts</string>
+    <string name="repeat_section">Repeat Section</string>
 </resources>
