--- a/core/src/main/res/values-pt-rBR/strings.xml
+++ b/core/src/main/res/values-pt-rBR/strings.xml
@@ -410,7 +410,6 @@
   <string name="pref_automatic_download_on_battery_title">Baixar enquanto não está carregando</string>
   <string name="pref_automatic_download_on_battery_sum">Permitir download automático enquanto a bateria não está carregando</string>
   <string name="pref_parallel_downloads_title">Downloads em paralelo</string>
-  <string name="pref_episode_cache_title">Cache de episódios</string>
   <string name="pref_episode_cache_summary">Número total de episódios baixados em cache no dispositivo. O download automático será suspenso se esse número for atingido.</string>
   <string name="pref_episode_cover_title">Usar capa do episódio</string>
   <string name="pref_episode_cover_summary">Usa a capa específica do episódio em listas, sempre que disponível. Se desmarcada, o aplicativo sempre usará a imagem de capa do podcast.</string>
@@ -779,4 +778,29 @@
   <string name="on_demand_config_setting_changed">Configuração atualizada com sucesso</string>
   <string name="on_demand_config_stream_text">Parece que você faz muito stream. Quer que as listas de episódios mostrem botões de stream?</string>
   <string name="on_demand_config_download_text">Parece que você faz muitos downloads. Quer que as listas de episódios mostrem botões de download?</string>
+    <string name="delete_playlist">Excluir lista de reprodução</string>
+  <string name="delete_playlist_confirmation_msg">Deseja eliminar esta lista de reprodução?</string>
+  <string name="playlists_label">Playlists</string>
+  <string name="home_fragment_label">Destaque</string>
+  <string name="pref_auto_delete_playlist_summary">Excluir episódios reprodução de exclusão automática</string>
+  <string name="pref_auto_delete_playlist_title">Mantenha episódios de listas de reprodução</string>
+  <string name="add_to_playlist_label">Adicionar à Lista de Reprodução</string>
+  <string name="no_playlists_label">Sem listas de reprodução</string>
+  <string name="no_playlists_sub_label">Depois de criar uma lista de reprodução, aparecerá aqui.</string>
+  <string name="auto_download_cache_pref_summary">"O número de episódios mantidos por download automático. Excluídos da exclusão automática. "</string>
+  <string name="pref_auto_download_title">Download automático</string>
+  <string name="pref_automatic_download_sum">Ativar o descarregamento automático de episódios</string>
+  <string name="speed_adjusted_label">Tempo ajustado de velocidade</string>
+  <string name="priority">Prioridade</string>
+  <string name="delete_played">Excluir Jogado</string>
+  <string name="filter_by_podcasts">Filtro por Podcasts</string>
+  <string name="repeat_section">Secção de Repetição</string>
+  <string name="feed_settings_other_title">Outros</string>
+  <string name="feed_settings_player_title">Reprodução</string>
+  <string name="left_short">E</string>
+  <string name="right_short">C</string>
+  <string name="volume">Volume</string>
+  <string name="repeat_episode">Episódio de Repetição</string>
+  <string name="feed_tags_label">Etiquetas</string>
+  <string name="feed_tags_summary">Mude as etiquetas deste podcast para ajudar a organizar as suas subscrições</string>
 </resources>
